// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds actor search views search gives relevant results 1`] = `
Array [
  Object {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
    "did": "user(0)",
    "displayName": "Carlton Abernathy IV",
    "handle": "aliya-hodkiewicz.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  Object {
    "did": "user(2)",
    "handle": "cara-wiegand69.test",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  Object {
    "did": "user(3)",
    "handle": "carlos6.test",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  Object {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(0)@jpeg",
    "did": "user(4)",
    "displayName": "Latoya Windler",
    "handle": "carolina-mcderm77.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  Object {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(7)/cids(0)@jpeg",
    "did": "user(6)",
    "displayName": "Rachel Kshlerin",
    "handle": "cayla-marquardt39.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  Object {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(9)/cids(0)@jpeg",
    "did": "user(8)",
    "displayName": "Carol Littel",
    "handle": "eudora-dietrich4.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  Object {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(11)/cids(0)@jpeg",
    "did": "user(10)",
    "displayName": "Sadie Carter",
    "handle": "shane-torphy52.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
]
`;

exports[`pds actor search views typeahead gives relevant results 1`] = `
Array [
  Object {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
    "did": "user(0)",
    "displayName": "Carlton Abernathy IV",
    "handle": "aliya-hodkiewicz.test",
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  Object {
    "did": "user(2)",
    "handle": "cara-wiegand69.test",
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  Object {
    "did": "user(3)",
    "handle": "carlos6.test",
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  Object {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(0)@jpeg",
    "did": "user(4)",
    "displayName": "Latoya Windler",
    "handle": "carolina-mcderm77.test",
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  Object {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(7)/cids(0)@jpeg",
    "did": "user(6)",
    "displayName": "Rachel Kshlerin",
    "handle": "cayla-marquardt39.test",
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  Object {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(9)/cids(0)@jpeg",
    "did": "user(8)",
    "displayName": "Carol Littel",
    "handle": "eudora-dietrich4.test",
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  Object {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(11)/cids(0)@jpeg",
    "did": "user(10)",
    "displayName": "Sadie Carter",
    "handle": "shane-torphy52.test",
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
]
`;
